Version : 4.12.8 #XG1
- Bugs fixed and revised.
- Nuget Update System Drawing Common 6.0.
- Gumps: Added listing methodform.
- Add Animation XML Editor.

Version : 4.12.7 #XG1
- Added methods to load, stop, and play random MP3 files from a directory, 
  including logic to prevent song replay when manually stopped and enabling randomized song selection upon song end.
- Added Com : medien player lib.
- Update Nuget Paket.
- RoundButton class added for toolbox.

Version : 4.12.6 #XG1
- Added backup directory copy feature (Path Settings).
- Added BtnLogDir Open Log Dir (Options).
- Added function reads the colors of an image, displays them in a RichTextBox, and allows visualization in a PictureBox through highlighting. (Items).
- Added map cordinate to clipboard (map)
- Added Image animation management with support for image import from clipboard and load and customizable animation speed.
- Added Tiledata Item and Land Copy and Insert all Settings, into contex menu. And multiple import.
- Added an export function in Gump for all addresses to a text file in decimal or hexadecimal format. 
  Also added an import function to import from a text file and directory with decimal or hexadecimal image names to the specified address.
- Added Gump Mirror function.
- Added hotkey (Ctrl + Alt + P) to bring the Profile window to the front and play a sound.
- Added UOP Packer autofill feature that automatically populates textboxes based on file selection and file type when the checkbox is enabled.
- Added AnimationEdit Lists all IDs in a text file. 
- Added a new label to the Items toolstrip to display decimals, making it more user-friendly than before.
- Added Items - toggle for rhombus function via button.
- Added Items - an additional PictureBox with dimensions 1000x1000 to display larger images for testing and zoom function.
- Items: Added Mass Removal and Select with Ctrl.

Version : 4.12.5 #XG1
- AminEdit added new features, Body Human display will be expanded, and Mounted.